--- a/portfolio.html
+++ b/portfolio.html
@@ -318,7 +318,7 @@
             </p>
           </div>
           <div class="footer-social">
-            <p class="title-social">Social media</p>
+            <p class="footer-title">Social media</p>
             <ul class="socials-list">
               <li class="socials-item">
                 <a class="socials-link" href="">
