--- a/portfolio.html
+++ b/portfolio.html
@@ -350,6 +350,28 @@
               </li>
             </ul>
           </div>
+          <div class="footer-subscribe">
+            <form class="subscribe-form" name="subscribe-form">
+              <label class="footer-title label-subscribe" for="subscribe-mail">
+                Subscribe
+              </label>
+              <div class="footer-container">
+                <input
+                  class="input-subscribe-mail"
+                  type="email"
+                  name="subscribe-mail"
+                  id="subscribe-mail"
+                  placeholder="E-mail"
+                />
+                <button class="button button-subscribe" type="submit">
+                  <span class="button-label">Subscribe</span>
+                  <svg class="subscribe-icon">
+                    <use href="./images/sprite.svg#icon-subscribe"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
