--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <div class="form-field-text">
               <label class="form-label" for="comment">Comment</label>
               <textarea
-                class="form-input form-comment"
+                class="form-comment form-input"
                 name="comment"
                 id="comment"
                 placeholder="Text input"
